@@ -12,6 +12,8 @@ Changes in version 1.8.0 beta (2009-04-16):
   See wxSFShapeBase::SetCustomDockPoint(int dp) and wxSFShapeBase::GetCustomDockPoint() fucntions.
 - Added new alignment styles valignLINE_START, valignLINE_END, halignLINE_START and halignLINE_END.
 - Added function void wxSFShapeBase::GetAssignedConnections(wxClassInfo* shapeInfo, wxSFShapeBase::CONNECTMODE mode, ShapeList& lines).
+- Added function void wxSFShapeCanvas::ScrollToShape(wxSFshapeBase *shape) which scrolls the shape canvas so the given
+  shape will be located in its center.
   calling its equivalent in a diagram manager class.
 - Renamed function wxSFShapeBase::IsInside(const wxPoint& pos) to wxSFShapeBase::Contains(const wxPoint& pos) due to
   its previous misleading name.
@@ -22,6 +24,7 @@ Changes in version 1.8.0 beta (2009-04-16):
 - Fixed crash occured when undo/redo operations were used on a shape canvas containing control shapes (wxSFControlShape).
 - Fixed crash occured when NULL pointer was passed to "shapeInfo" parameter of wxSFDiagramManager::AddShape(wxClassInfo* shapeInfo,
   const wxPoint& pos, bool saveState) function.
+- Fixed scaling of multiple shapes using multi-edit mode.
 
 Changes in version 1.7.2 beta (2009-03-16):
 --------------------------------------------
